# GTGH-AI-Engineering-Day-1

./: Readme.md  pyproject.toml  requirements.txt
config/: config.yaml  logger_config.toml
data/: input.txt
src/day_1/session_b/: example1.py  example2.py  example3.py
src/day_1/session_c/: example1.py
src/day_1/utilities/: logger.py  logger_setup.py
tests/: test_example3.py
