[project]
name = "day-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Odysseas Efremidis",email = "oefremidis@athtech.gr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.31,<0.4.0)",
    "openai (>=1.101.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "azure-identity (>=1.24.0,<2.0.0)",
    "azure-storage-blob (>=12.26.0,<13.0.0)",
    "azure-search (>=1.0.0b2,<2.0.0)",
    "azure-search-documents (>=11.5.3,<12.0.0)",
    "toml (>=0.10.2,<0.11.0)",

]

[tool.poetry]
packages = [{include = "day_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
